--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
+    "querystringify": "^2.1.1",
     "realm": "^2.28.0"
   }
 }
